Bug 437039 - Layer opacity change not always linked to selected layer.
Summary: Layer opacity change not always linked to selected layer.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-13 12:10 UTC by noccu
Modified: 2021-07-27 17:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description noccu 2021-05-13 12:10:40 UTC
When setting the layer opacity on a layer and selecting another layer shortly after, the opacity change affects the newly selected layer if done fast enough. The speed required is within range for me to encounter it during normal use.


STEPS TO REPRODUCE
1. Create 2 layers.
2. Select and change opacity of layer 1.
3. Quickly select layer 2.

OBSERVED RESULT
Opacity is changed for layer 2.

EXPECTED RESULT
Opacity is changed for layer 1.

SOFTWARE/OS VERSIONS
Windows: 10
Krita: 4.4.4-alpha (git af6e519)
Qt Version: 5.12.9
Comment 1 Tiar 2021-05-13 13:43:57 UTC
Was it a case in Krita 4.4.3? Is it also a case on Krita 5.0?
Comment 2 noccu 2021-05-13 14:32:23 UTC
(In reply to Tiar from comment #1)
> Was it a case in Krita 4.4.3? Is it also a case on Krita 5.0?

I can't test Krita 5.0 here but it is present in 4.4.3 up to the latest nightly (cc5d52cd01). From memory, it has also been present on any previous version I have used.
Comment 3 acc4commissions 2021-05-13 14:55:23 UTC
Yes, I have been having this issue for a long time as well.
Comment 4 Bug Janitor Service 2021-05-14 04:33:36 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 5 Ahab Greybeard 2021-06-09 13:00:21 UTC
I can confirm this as described for the 4.4.x appimages and the Jun 08 5.0.0-prealpha (git 8944b0f) appimage.

I can make it happen if I use a stylus tap to set opacity and then tap another layer, at which I'm fast enough, but not by mouse clicking which is too slow.
Comment 6 sh_zam 2021-07-26 17:46:54 UTC
Git commit 43fea8a2f1a0eeb4e4c1b7df0b206baa7de6effc by Sharaf Zaman.
Committed on 26/07/2021 at 17:44.
Pushed by szaman into branch 'master'.

Bugfix: Layer opacity doesn't change the selected layer

M  +2    -1    plugins/dockers/layerdocker/LayerBox.cpp
M  +1    -0    plugins/dockers/layerdocker/LayerBox.h

https://invent.kde.org/graphics/krita/commit/43fea8a2f1a0eeb4e4c1b7df0b206baa7de6effc
Comment 7 acc4commissions 2021-07-27 14:37:23 UTC
It is not fixed. The opacity change is now messed up in very weird way, I don't even know how to describe it;
Comment 8 acc4commissions 2021-07-27 14:37:50 UTC
(In reply to acc4commissions from comment #7)
> It is not fixed. The opacity change is now messed up in very weird way, I
> don't even know how to describe it;

Testing krita-nightly-x64-5.0.0-prealpha-5f13af4f10
Comment 9 sh_zam 2021-07-27 17:03:44 UTC
Git commit 20ad2e7100ccb85804ee8ce74f8e6629eee28282 by Sharaf Zaman.
Committed on 27/07/2021 at 16:56.
Pushed by szaman into branch 'master'.

Fix Layers Docker's opacity slider

M  +11   -1    plugins/dockers/layerdocker/LayerBox.cpp
M  +2    -0    plugins/dockers/layerdocker/LayerBox.h

https://invent.kde.org/graphics/krita/commit/20ad2e7100ccb85804ee8ce74f8e6629eee28282
Comment 10 sh_zam 2021-07-27 17:05:24 UTC
(In reply to acc4commissions from comment #7)
> It is not fixed. The opacity change is now messed up in very weird way, I
> don't even know how to describe it;

Thank you for testing. It was an oversight. The latest change should fix this.