Bugfix: Layer opacity doesn't change the selected layer

BUG:437039